# IsaacGymManipulation

./: .gitignore  README.md  requirements.txt  setup.py
configs/: main_config.yaml
configs/command/: franka_dof_abs.yaml  franka_dof_trans.yaml  franka_effort.yaml  tiago_dof.yaml  tiago_dof_abs.yaml
configs/command/pd_values/: franka_dof_pids.yaml  tiago_dof_gazebo_pids.yaml
configs/scene/: franka_ycb.yaml  tiago_ycb.yaml
isaac_gym_manipulation/assets/pd_controllers/: franka_dof_pids.yaml
isaac_gym_manipulation/assets/urdf/pal_gripper_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
isaac_gym_manipulation/assets/urdf/pal_gripper_description/gazebo/: gazebo.urdf.xacro
isaac_gym_manipulation/assets/urdf/pal_gripper_description/launch/: gripper_kinematics_test.launch
isaac_gym_manipulation/assets/urdf/pal_gripper_description/robots/: upload.launch  upload_gripper.launch
isaac_gym_manipulation/assets/urdf/pal_gripper_description/test/: test_gripper_test.test
isaac_gym_manipulation/assets/urdf/tiago_description/robots/: tiago_gripper.urdf  tiago_hey5.urdf
isaac_gym_manipulation/command/: action_pre_process.py  dof_command.py
isaac_gym_manipulation/debugger/: debuggers.py
isaac_gym_manipulation/envs/: __init__.py  robot_solo_env.py  table_grasp_env.py  utils.py
isaac_gym_manipulation/envs/base/: vec_task.py
isaac_gym_manipulation/grasping/: grasp_detection.py  utils.py
isaac_gym_manipulation/isaac_utils/: actor_state.py  isaac_tensor_manager.py  isaac_tensor_state.py
isaac_gym_manipulation/unit_test/: simple_create.py
(+5 files in other folders)
